# anvil

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  COPILOT_REVIEW_REQUEST.md  Dockerfile  QUICKSTART.md  README.md  REVIEW.md  REVIEW_REQUEST.md  docker-compose.yml  pyproject.toml
docs/: AGENT_ONBOARDING.md  CONTRACT.md  REVIEW_REQUEST.md  TASKS.md
dogfood/: harden_tracks.yaml  hardening_issue.md  tracks.yaml
src/anvil/: __init__.py  cli.py  config.py  doctor.py  orchestrator.py  treesitter_utils.py  worktrees.py
src/anvil/artifacts/: schemas.py
src/anvil/contracts/: base.py  validate.py
src/anvil/prompts/: load.py
src/anvil/providers/: base.py  claude_cli.py  common.py  copilot_cli.py  gemini_cli.py  gh_cli.py  manual.py
src/anvil/score/: compute.py
src/anvil/steps/: apply.py  context_builder.py  judge.py  repro_assess.py  repro_plan.py  track_iterate.py  verify.py
src/anvil/templates/: issue.md  tracks.yaml
src/anvil/util/: image_utils.py  json_utils.py  redaction.py  shell.py  text.py
src/debugger/: __init__.py  cli.py  config.py  doctor.py  init.py  orchestrator.py  treesitter_utils.py  worktrees.py
src/debugger/artifacts/: schemas.py  (+1 more)
tests/: test_api.py  test_apply.py  test_cli.py  test_concurrency.py  test_diagram_flow.py  test_harden.py  test_ids.py  test_judge_role_aware.py  test_judge_scoring.py  test_loop_logic.py  test_paths.py  test_providers.py  test_reachability.py  test_repro_assess.py  test_resume_wiring.py  test_schemas.py  test_shell.py  test_shell_properties.py  test_store.py  test_validation_failures.py
(+30 files in other folders)
